--- a/10_for_loop.html
+++ b/10_for_loop.html
@@ -9,9 +9,9 @@
   <title>Document</title>
 </head>
 <body>
-<button id="forLoop">for문 실행</button>
-<button id="forEach">for~Each문 실행</button>
-<button id="JQuerfor">for(Jquery) 실행</button>
+<button id="btnforLoop">for문 실행</button>
+<button id="btnforEach">for~Each문 실행</button>
+<button id="btnJQuerEach">for(Jquery) 실행</button>
 <div>
   <div>
     <div>For 문</div>
@@ -25,10 +25,63 @@
       </thead>
       <tbody id="forOut">
         <!--이곳에 For Loop를 돌아서 결과가 뿌려지는 곳  -->
-        
+
+        <tr>
+          <td>1</td>
+          <td>장원영</td>
+          <td>21</td>
+        </tr>
+
       </tbody>
     </table>
   </div>
+
+  <div>
+    <div>For~Each문</div>
+    <table>
+      <thead>
+        <tr>
+          <th>NO</th>
+          <th>이름</th>
+          <th>나이</th>
+        </tr>
+      </thead>
+      <tbody id="forEach">
+
+
+        <tr>
+          <td>1</td>
+          <td>장원영</td>
+          <td>21</td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
+
+  <div>
+    <div>JQuer Each문</div>
+    <table>
+      <thead>
+        <tr>
+          <th>NO</th>
+          <th>이름</th>
+          <th>나이</th>
+        </tr>
+      </thead>
+      <tbody id="jqueryEach">
+
+
+        <tr>
+          <td>1</td>
+          <td>장원영</td>
+          <td>21</td>
+        </tr>
+
+      </tbody>
+    </table>
+  </div>
+
 </div>
 </body>
 </html>
